[gd_scene load_steps=3 format=3 uid="uid://br46yr238htby"]

[ext_resource type="Script" path="res://Scenes/play_area.gd" id="1_mp47d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdc3q"]
size = Vector2(1600, 1200)

[node name="PlayArea" type="Area2D"]
position = Vector2(1, 0)
collision_mask = 5
script = ExtResource("1_mp47d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gdc3q")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
